#30 - Fix various errors in the AddPersonForm converters

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,8 @@
 field.invalid = Value is invalid
 field.too-long = Input is too long
 field.required = Required
+email.invalid = Not a valid email address
+phone.invalid = Not a valid phone number
 
 # participants-specific validation messages
 participants.validation.underage.gender.required = Gender hast to be set for minors.
