Enable customized participants tables + doc

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,11 @@
 # general
+ok = ok
+yes = yes
+no = no
 participant.female = Girls
 participant.male = Boys
+field.not-set = ---
+field.unknown = unknown
 
 # validation messages
 field.invalid = Value is invalid
@@ -13,3 +18,20 @@ options.select-one = Please select one option
 
 # participants-specific validation messages
 participants.validation.underage.gender.required = Gender hast to be set for minors.
+
+# date and time
+flex-datetime = {0,date}, {1,time}
+today = today
+yesterday = yesterday
+tomorrow = tomorrow
+ereyesterday = ere-yesterday
+
+today.with-flex-time = today, {0,time}
+yesterday.with-flex-time = yesterday, {0,time}
+tomorrow.with-flex-time = tomorrow, {0,time}
+ereyesterday.with-flex-time = ere-yesterday, {0,time}
+
+# participants table
+col.name = Name
+col.email = Email
+col.phone = Phone number
