--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,6 +1,10 @@
 # general
+ok = OK
+yes = ja
+no = nein
 participant.female = M\u00E4dchen
 participant.male = Jungen
+field.not-set = ---
 
 # validation messages
 field.invalid = Ung\u00FCltiger Wert
@@ -13,3 +17,8 @@ options.select-one = Bitte eine Option ausw\u00E4hlen
 
 # participants-specific validation messages
 participants.validation.underage.gender.required = Geschlecht muss bei Minderj\u00E4hrigen angegeben werden.
+
+# participants table
+col.name = Name
+col.email = E-Mail
+col.phone = Telefon
