Add export functionality for participants tables
The tables may now be exported as CSV files.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -35,3 +35,24 @@ ereyesterday.with-flex-time = ere-yesterday, {0,time}
 col.name = Name
 col.email = Email
 col.phone = Phone number
+col.address = Address
+col.city = City
+col.dateOfBirth = Date of birth
+col.age = Age
+col.eatingHabits = Eating habits
+col.healthImpairments = Health impairments
+col.nabu = NABU-membership
+col.personRemarks = Person remarks
+col.parents = Parents
+col.parentsPrivatePhone = Parents' phone (private)
+col.parentsLandlinePhone = Parents' phone (landline)
+col.parentsWorkPhone = Parents' phone (work)
+col.registrationDate = Registration date
+col.registrationFormSent = Form sent?
+col.registrationFormFilled = Form filled?
+col.feePayed = Fee payed?
+col.arrival = Arrival
+col.departure = Departure
+col.goHomeSingly = May go home singly
+col.participationTime = Participation time
+col.participationRemarks = Participation remarks
