--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -5,6 +5,7 @@ no = nein
 participant.female = M\u00E4dchen
 participant.male = Jungen
 field.not-set = ---
+field.unknown = unbekannt
 
 # validation messages
 field.invalid = Ung\u00FCltiger Wert
@@ -18,7 +19,40 @@ options.select-one = Bitte eine Option ausw\u00E4hlen
 # participants-specific validation messages
 participants.validation.underage.gender.required = Geschlecht muss bei Minderj\u00E4hrigen angegeben werden.
 
+# date and time
+flex-datetime = {0,date}, {1,time}
+today = heute
+yesterday = gester
+tomorrow = morgen
+ereyesterday = vorgestern
+
+today.with-flex-time = heute, {0,time}
+yesterday.with-flex-time = gestern, {0,time}
+tomorrow.with-flex-time = morgen, {0,time}
+ereyesterday.with-flex-time = vorgestern, {0,time}
+
 # participants table
 col.name = Name
-col.email = E-Mail
+col.email = Email
 col.phone = Telefon
+col.address = Adresse
+col.city = Wohnort
+col.dateOfBirth = Geburtsdatum
+col.age = Alter
+col.eatingHabits = Ern\u00E4hrung
+col.healthImpairments = Allergien, o.\u00E4.
+col.nabu = NABU-Mitgliedschaft
+col.personRemarks = Bemerkungen (zur Person)
+col.parents = Eltern
+col.parentsPrivatePhone = Private Telefonnummer (Eltern)
+col.parentsLandlinePhone = Festnetz (Eltern)
+col.parentsWorkPhone = Telefonnummer auf Arbeit (Eltern)
+col.registrationDate = Anmeldedatum
+col.registrationFormSent = Formular versendet?
+col.registrationFormFilled = Formular ausgef\u00FCllt ?
+col.feePayed = TNB bezahlt?
+col.arrival = Anreise
+col.departure = Abreise
+col.goHomeSingly = Selbstst\u00E4ndige Abreise?
+col.participationTime = Teilnahmezeitraum
+col.participationRemarks = Bemerkungen (zur Teilnahme)
