Fix some typos in participants' table

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -20,16 +20,16 @@ options.select-one = Bitte eine Option ausw\u00E4hlen
 participants.validation.underage.gender.required = Geschlecht muss bei Minderj\u00E4hrigen angegeben werden.
 
 # date and time
-flex-datetime = {0,date}, {1,time}
+flex-datetime = {0,date,short}, {1,time,short}
 today = heute
-yesterday = gester
+yesterday = gestern
 tomorrow = morgen
 ereyesterday = vorgestern
 
-today.with-flex-time = heute, {0,time}
-yesterday.with-flex-time = gestern, {0,time}
-tomorrow.with-flex-time = morgen, {0,time}
-ereyesterday.with-flex-time = vorgestern, {0,time}
+today.with-flex-time = heute, {0,time,short}
+yesterday.with-flex-time = gestern, {0,time,short}
+tomorrow.with-flex-time = morgen, {0,time,short}
+ereyesterday.with-flex-time = vorgestern, {0,time,short}
 
 # participants table
 col.name = Name
