Add missing resource string for NABU membership

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,6 +31,23 @@ yesterday.with-flex-time = yesterday, {0,time}
 tomorrow.with-flex-time = tomorrow, {0,time}
 ereyesterday.with-flex-time = ere-yesterday, {0,time}
 
+# filters
+filter.inactive = doesn't matter
+filter.inverted.false = exclusively
+filter.inverted.true = except
+
+# persons filter
+filter.firstname.title = First name
+filter.firstname.placeholder = Enter the persons first name here
+filter.gender.title = Gender
+filter.gender.placeholder = Select the person's gender
+filter.gender.male = Male
+filter.gender.female = Female
+filter.gender.other = Other
+
+filter.event.dialog = Veranstaltung suchen
+filter.event.action = /events/search
+
 # participants table
 col.name = Name
 col.email = Email
@@ -56,3 +73,6 @@ col.departure = Departure
 col.goHomeSingly = May go home singly
 col.participationTime = Participation time
 col.participationRemarks = Participation remarks
+
+participant.nabu-member = yes
+participant.nabu-member.false = no
