--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -56,3 +56,6 @@ col.departure = Abreise
 col.goHomeSingly = Selbstst\u00E4ndige Abreise?
 col.participationTime = Teilnahmezeitraum
 col.participationRemarks = Bemerkungen (zur Teilnahme)
+
+participant.nabu-member = ja
+participant.nabu-member.false = nein
