Add missing messages for marketing status

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -76,6 +76,7 @@ col.email = Email
 col.phone = Phone number
 col.address = Address
 col.city = City
+col.marketingStatus = Marketing Agreement
 col.dateOfBirth = Date of birth
 col.age = Age
 col.eatingHabits = Eating habits
