--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -76,6 +76,7 @@ col.email = Email
 col.phone = Telefon
 col.address = Adresse
 col.city = Wohnort
+col.marketingStatus = Marketing-Zustimmung
 col.dateOfBirth = Geburtsdatum
 col.age = Alter
 col.eatingHabits = Ern\u00E4hrung
