Add counselor filter

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -65,6 +65,9 @@ filter.juleicaexpiry.title = Expiry date
 filter.juleicalevel.title = Level
 filter.juleicalevel.g = G
 filter.juleicalevel.l = L
+filter.counselor.title = Event counselor
+filter.counselor.dialog = Search for event
+filter.counselor.action = /api/events/search
 
 filter.event.title = Event participations
 filter.event.dialog = Search for event
