--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -65,6 +65,9 @@ filter.juleicaexpiry.title = Ablaufdatum
 filter.juleicalevel.title = Level
 filter.juleicalevel.g = G
 filter.juleicalevel.l = L
+filter.counselor.title = Veranstaltungs-Betreuung
+filter.counselor.dialog = Nach Veranstaltungen suchen
+filter.counselor.action = /api/events/search
 
 filter.event.title = Veranstaltungsteilnahmen
 filter.event.dialog = Nach Veranstaltungen suchen
