Add participants table formatter for lastname, firstname

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -75,6 +75,7 @@ filter.event.action = /api/events/search
 
 # participants table
 col.name = Name
+col.reversedName = Last name, first name 
 col.email = Email
 col.phone = Phone number
 col.address = Address
