--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -75,6 +75,7 @@ filter.event.action = /api/events/search
 
 # participants table
 col.name = Name
+col.reversedName = Nachname, Vorname
 col.email = Email
 col.phone = Telefon
 col.address = Adresse
